--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -6,16 +6,20 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Download ngrok
+      - name: Download and setup ngrok
         run: |
           Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-          Expand-Archive ngrok.zip
+          Expand-Archive ngrok.zip -DestinationPath ngrok
+          cd ngrok
           ./ngrok.exe authtoken YOUR_AUTH_TOKEN
+        shell: pwsh
 
-      - name: Enable RDP
+      - name: Enable RDP and start ngrok tunnel
         run: |
           net user kamel123 MyStrong123 /add
           net localgroup administrators kamel123 /add
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name 'fDenyTSConnections' -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+          cd ngrok
           ./ngrok.exe tcp 3389
+        shell: pwsh
