--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -11,7 +11,7 @@ jobs:
           Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
           Expand-Archive ngrok.zip -DestinationPath ngrok
           cd ngrok
-          ./ngrok.exe authtoken YOUR_AUTH_TOKEN
+          ./ngrok.exe authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
         shell: pwsh
 
       - name: Enable RDP and start ngrok tunnel
@@ -20,6 +20,6 @@ jobs:
           net localgroup administrators kamel123 /add
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name 'fDenyTSConnections' -Value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-          cd ngrok
-          ./ngrok.exe tcp 3389
+          cd ngrok; ./ngrok.exe tcp 3389 > tunnel.txt
+          Get-Content tunnel.txt
         shell: pwsh
